# stream_processor

./: .clang-format  CMakeLists.txt  LICENSE.txt  README.md  main.cpp
include/psp/: function_traits.hpp  indexed_processing.hpp  stream_processor.hpp  stream_queue.hpp  thread_pool.hpp
test/: CMakeLists.txt
test/src/: functional.cpp  fuzz.cpp  unit.cpp  unit_indexed.cpp  unit_queue.cpp
